[package]
name = "insert_delete_getrandom_o1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version="0.6.5", features=["std"], default-features=false}

[lib]
doctest = false
path="insert_delete_getrandom_o1.rs"